--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -1,89 +1,116 @@
 {
-  "greeting": "안녕하세요",
-  "community": "커뮤니티",
-  "chat": "채팅",
-  "notifications": "알림",
-  "moments": "모멘트",
-  "language": "언어",
-  "english": "영어",
-  "korean": "한국어",
-  "followers": "팔로워",
-  "followings": "팔로잉",
-  "my_moments": "내 모멘트",
-  "logout": "로그아웃",
-  "sign_in": "로그인",
-  "profile": {
-    "title": "내 프로필",
-    "messages": {
-      "image_update_success": "프로필 사진이 성공적으로 업데이트되었습니다",
-      "image_update_failure": "프로필 사진 업데이트 실패",
-      "profile_update_success": "프로필이 성공적으로 업데이트되었습니다",
-      "profile_update_failure": "프로필 업데이트 실패",
-      "error_loading_profile": "프로필을 불러오는 중 오류 발생",
-      "no_profile_data": "사용자 프로필 데이터가 없습니다",
-      "unknown_error": "알 수 없는 오류가 발생했습니다",
-      "no_bio": "소개 정보가 없습니다",
-      "not_specified": "지정되지 않음"
+    "greeting": "안녕하세요",
+    "community": "커뮤니티",
+    "chat": "채팅",
+    "notifications": "알림",
+    "moments": "모멘트",
+    "language": "언어",
+    "english": "영어",
+    "korean": "한국어",
+    "followers": "팔로워",
+    "followings": "팔로잉",
+    "my_moments": "내 모멘트",
+    "logout": "로그아웃",
+    "sign_in": "로그인",
+    "profile": {
+        "title": "내 프로필",
+        "messages": {
+            "image_update_success": "프로필 사진이 성공적으로 업데이트되었습니다",
+            "image_update_failure": "프로필 사진 업데이트 실패",
+            "profile_update_success": "프로필이 성공적으로 업데이트되었습니다",
+            "profile_update_failure": "프로필 업데이트 실패",
+            "error_loading_profile": "프로필을 불러오는 중 오류 발생",
+            "no_profile_data": "사용자 프로필 데이터가 없습니다",
+            "unknown_error": "알 수 없는 오류가 발생했습니다",
+            "no_bio": "소개 정보가 없습니다",
+            "not_specified": "지정되지 않음"
+        },
+        "stats": {
+            "followers": "팔로워",
+            "following": "팔로잉",
+            "moments": "모멘트",
+            "visitors": "방문자"
+        },
+        "sections": {
+            "personal_info": "개인 정보",
+            "bio": "소개",
+            "languages": "언어"
+        },
+        "labels": {
+            "name": "이름",
+            "email": "이메일",
+            "gender": "성별",
+            "birthday": "생일",
+            "native_language": "모국어",
+            "learning": "배우는 중",
+            "of": "의"
+        },
+        "placeholders": {
+            "bio": "자신에 대해 간단히 소개해주세요",
+            "select_gender": "성별 선택",
+            "select_date": "날짜 선택",
+            "select_native_language": "모국어 선택",
+            "select_learning_language": "배울 언어 선택"
+        },
+        "options": {
+            "male": "남성",
+            "female": "여성"
+        },
+        "actions": {
+            "edit": "수정",
+            "save": "저장",
+            "cancel": "취소",
+            "edit_photo": "사진 편집"
+        },
+        "buttons": {
+            "edit": "수정",
+            "save": "저장",
+            "cancel": "취소"
+        }
     },
-    "stats": {
-      "followers": "팔로워",
-      "following": "팔로잉",
-      "moments": "모멘트",
-      "visitors": "방문자"
-    },
-    "sections": {
-      "personal_info": "개인 정보",
-      "bio": "소개",
-      "languages": "언어"
-    },
-    "labels": {
-      "name": "이름",
-      "email": "이메일",
-      "gender": "성별",
-      "birthday": "생일",
-      "native_language": "모국어",
-      "learning": "배우는 중",
-      "of": "의"
-    },
-    "placeholders": {
-      "bio": "자신에 대해 간단히 소개해주세요",
-      "select_gender": "성별 선택",
-      "select_date": "날짜 선택",
-      "select_native_language": "모국어 선택",
-      "select_learning_language": "배울 언어 선택"
-    },
-    "options": {
-      "male": "남성",
-      "female": "여성"
-    },
-    "actions": {
-      "edit": "수정",
-      "save": "저장",
-      "cancel": "취소",
-      "edit_photo": "사진 편집"
-    },
-    "buttons": {
-      "edit": "수정",
-      "save": "저장",
-      "cancel": "취소"
+    "moments_section": {
+        "title": "모멘트",
+        "question": "무슨 생각을 하고 계신가요,",
+        "loading": "불러오는 중",
+        "loading_moments": "모멘트를 불러오는 중...",
+        "error_loading": "모멘트를 불러오는 중 오류 발생",
+        "error_info": "모멘트를 불러올 수 없습니다. 나중에 다시 시도해주세요.",
+        "retry_btn": "다시 시도",
+        "no_moments": "모멘트 없음",
+        "first_to_moment": "가장 먼저 특별한 순간을 커뮤니티와 공유해보세요",
+        "share_moment": "모멘트 공유하기",
+        "moment_login_error": "모멘트를 좋아요하려면 로그인해주세요",
+        "moment_like_error": "좋아요 상태를 업데이트하지 못했습니다",
+        "moment_like": "좋아요",
+        "moment_comment": "댓글",
+        "moment_share": "공유",
+        "no_comments": "아직 댓글이 없습니다. 첫 번째 댓글을 남겨보세요!",
+        "invalidMomentId": "유효하지 않은 모멘트 ID입니다",
+        "loadingMoment": "모멘트 세부 정보 불러오는 중...",
+        "noDetailsFound": "세부 정보를 찾을 수 없습니다",
+        "goBack": "뒤로 가기",
+        "momentDetails": "모멘트 상세 정보",
+        "pleaseLoginFirst": "먼저 로그인해 주세요",
+        "removedLike": "좋아요 취소됨",
+        "likedMoment": "모멘트를 좋아합니다",
+        "failedToUpdateLike": "좋아요 상태 업데이트 실패",
+        "emptyCommentError": "댓글을 입력해 주세요",
+        "commentAdded": "댓글이 추가되었습니다",
+        "failedToAddComment": "댓글 추가 실패",
+        "loadingComments": "댓글 불러오는 중...",
+        "writeCommentPlaceholder": "댓글을 작성해 주세요...",
+        "signInToComment": "댓글을 작성하려면 로그인해 주세요",
+        "signIn": "로그인",
+        "noCommentsYet": "아직 댓글이 없습니다. 첫 번째 댓글을 남겨보세요!",
+        "commentsCount": "댓글 {{count}}개",
+        "likeButton": "좋아요",
+        "commentButton": "댓글",
+        "shareButton": "공유",
+        "timeAgo": {
+            "justNow": "방금 전",
+            "minutesAgo": "{{minutes}}분 전",
+            "hoursAgo": "{{hours}}시간 전",
+            "daysAgo": "{{days}}일 전"
+        }
     }
-  },
-  "moments_section": {
-  "title": "모멘트",
-  "question": "무슨 생각을 하고 계신가요,",
-  "loading": "불러오는 중",
-  "loading_moments": "모멘트를 불러오는 중...",
-  "error_loading": "모멘트를 불러오는 중 오류 발생",
-  "error_info": "모멘트를 불러올 수 없습니다. 나중에 다시 시도해주세요.",
-  "retry_btn": "다시 시도",
-  "no_moments": "모멘트 없음",
-  "first_to_moment": "가장 먼저 특별한 순간을 커뮤니티와 공유해보세요",
-  "share_moment": "모멘트 공유하기",
-  "moment_login_error": "모멘트를 좋아요하려면 로그인해주세요",
-"moment_like_error": "좋아요 상태를 업데이트하지 못했습니다",
-"moment_like": "좋아요",
-"moment_comment": "댓글",
-"moment_share": "공유"
-
-}
 }
