--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -136,5 +136,29 @@
             "createSuccess": "모멘트가 성공적으로 생성되었습니다!",
             "createError": "모멘트 생성에 실패했습니다."
         }
+    },
+  "editMoment": {
+    "title": "모멘트 수정",
+    "toast": {
+      "maxImagesError": "최대 10개의 이미지를 업로드할 수 있습니다",
+      "updateSuccess": "모멘트가 성공적으로 업데이트되었습니다!",
+      "updateError": "모멘트 업데이트에 실패했습니다. 다시 시도해 주세요.",
+      "notAuthorized": "이 모멘트를 수정할 권한이 없습니다"
+    },
+    "form": {
+      "titleLabel": "제목",
+      "titlePlaceholder": "모멘트 제목을 입력하세요",
+      "descriptionLabel": "설명",
+      "descriptionPlaceholder": "모멘트에 대해 설명해 주세요...",
+      "imagesLabel": "이미지",
+      "maxImagesText": "최대 10개의 이미지를 업로드할 수 있습니다 (각 이미지 최대 5MB)",
+      "existingImagesLabel": "현재 이미지",
+      "newImagesLabel": "새로운 이미지",
+      "addMoreText": "추가하기",
+      "updateButton": "모멘트 업데이트",
+      "updatingButton": "업데이트 중...",
+      "cancelButton": "취소"
     }
+  }
+
 }
