--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -137,28 +137,117 @@
             "createError": "모멘트 생성에 실패했습니다."
         }
     },
-  "editMoment": {
-    "title": "모멘트 수정",
-    "toast": {
-      "maxImagesError": "최대 10개의 이미지를 업로드할 수 있습니다",
-      "updateSuccess": "모멘트가 성공적으로 업데이트되었습니다!",
-      "updateError": "모멘트 업데이트에 실패했습니다. 다시 시도해 주세요.",
-      "notAuthorized": "이 모멘트를 수정할 권한이 없습니다"
+    "editMoment": {
+        "title": "모멘트 수정",
+        "toast": {
+            "maxImagesError": "최대 10개의 이미지를 업로드할 수 있습니다",
+            "updateSuccess": "모멘트가 성공적으로 업데이트되었습니다!",
+            "updateError": "모멘트 업데이트에 실패했습니다. 다시 시도해 주세요.",
+            "notAuthorized": "이 모멘트를 수정할 권한이 없습니다"
+        },
+        "form": {
+            "titleLabel": "제목",
+            "titlePlaceholder": "모멘트 제목을 입력하세요",
+            "descriptionLabel": "설명",
+            "descriptionPlaceholder": "모멘트에 대해 설명해 주세요...",
+            "imagesLabel": "이미지",
+            "maxImagesText": "최대 10개의 이미지를 업로드할 수 있습니다 (각 이미지 최대 5MB)",
+            "existingImagesLabel": "현재 이미지",
+            "newImagesLabel": "새로운 이미지",
+            "addMoreText": "추가하기",
+            "updateButton": "모멘트 업데이트",
+            "updatingButton": "업데이트 중...",
+            "cancelButton": "취소"
+        }
     },
-    "form": {
-      "titleLabel": "제목",
-      "titlePlaceholder": "모멘트 제목을 입력하세요",
-      "descriptionLabel": "설명",
-      "descriptionPlaceholder": "모멘트에 대해 설명해 주세요...",
-      "imagesLabel": "이미지",
-      "maxImagesText": "최대 10개의 이미지를 업로드할 수 있습니다 (각 이미지 최대 5MB)",
-      "existingImagesLabel": "현재 이미지",
-      "newImagesLabel": "새로운 이미지",
-      "addMoreText": "추가하기",
-      "updateButton": "모멘트 업데이트",
-      "updatingButton": "업데이트 중...",
-      "cancelButton": "취소"
+    "authentication": {
+        "enterEmail": {
+            "title": "이메일을 입력하세요",
+            "emailLabel": "이메일 주소",
+            "emailPlaceholder": "이메일 입력",
+            "sendButton": "코드 보내기",
+            "sendingButton": "전송 중...",
+            "successMessage": "인증 코드가 성공적으로 전송되었습니다!",
+            "errorPrefix": "오류: "
+        },
+        "passwordReset": {
+            "successMessage": "비밀번호가 성공적으로 재설정되었습니다. 로그인해 주세요!"
+        },
+        "login": {
+            "title": "로그인",
+            "emailLabel": "이메일 주소",
+            "emailPlaceholder": "이메일 입력",
+            "passwordLabel": "비밀번호",
+            "passwordPlaceholder": "비밀번호 입력",
+            "forgotPassword": "비밀번호를 잊으셨나요?",
+            "signInButton": "로그인",
+            "signingInButton": "로그인 중...",
+            "newUserText": "새로운 사용자신가요?",
+            "registerLink": "회원가입",
+            "successMessage": "성공적으로 로그인했습니다",
+            "invalidCredentialsError": "유효하지 않은 자격 증명"
+        },
+        "account": {
+            "title": "계정 만들기",
+            "name": "이름",
+            "email": "이메일 주소",
+            "password": "비밀번호",
+            "passwordRequirement": "비밀번호는 8자 이상이어야 합니다",
+            "confirmPassword": "비밀번호 확인",
+            "continue": "계속하기",
+            "alreadyHaveAccount": "이미 계정이 있으신가요?",
+            "login": "로그인"
+        },
+        "profile": {
+            "title": "프로필 정보",
+            "bio": "소개 (선택사항)",
+            "bioPlaceholder": "자신에 대해 알려주세요",
+            "gender": "성별",
+            "genderOptions": {
+                "select": "성별 선택",
+                "male": "남성",
+                "female": "여성",
+                "other": "기타"
+            },
+            "birthDate": "생년월일",
+            "nativeLanguage": "모국어",
+            "selectLanguage": "언어 선택",
+            "languageToLearn": "배우고 싶은 언어",
+            "profileImages": "프로필 이미지",
+            "uploadPrompt": "프로필 이미지를 업로드하려면 클릭하세요",
+            "selectImages": "이미지 선택",
+            "back": "뒤로",
+            "processing": "처리 중..."
+        },
+        "verification": {
+            "title": "이메일 인증",
+            "sentMessage": "다음 이메일로 인증 코드를 보냈습니다:",
+            "verificationCode": "인증 코드",
+            "codePlaceholder": "6자리 코드 입력",
+            "verifyButton": "이메일 인증",
+            "verifying": "인증 중...",
+            "resendCode": "인증 코드 재전송",
+            "sending": "전송 중...",
+            "backToProfile": "프로필로 돌아가기",
+            "successMessage": "이메일이 성공적으로 인증되었습니다!",
+            "completePrompt": "아래 버튼을 클릭하여 등록을 완료하세요.",
+            "completeRegistration": "등록 완료"
+        },
+        "progressBar": {
+            "account": "계정",
+            "profile": "프로필",
+            "verify": "인증"
+        },
+        "toasts": {
+            "passwordMismatch": "비밀번호가 일치하지 않습니다",
+            "verificationSent": "인증 코드가 성공적으로 전송되었습니다!",
+            "sendCodeFailed": "인증 코드 전송에 실패했습니다",
+            "emailVerified": "이메일이 성공적으로 인증되었습니다!",
+            "invalidCode": "유효하지 않은 인증 코드",
+            "verifyFirst": "먼저 이메일을 인증해주세요",
+            "registrationSuccess": "등록 성공!",
+            "registrationError": "등록 중 오류 발생"
+        }
     }
-  }
-
 }
+
