--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -248,6 +248,100 @@
             "registrationSuccess": "등록 성공!",
             "registrationError": "등록 중 오류 발생"
         }
+    },
+    "communityMain": {
+        "title": "언어 교환",
+        "subtitle": "전 세계 언어 학습자들과 연결하세요",
+        "stats": {
+            "activeLearners": "활성 학습자",
+            "languages": "언어",
+            "countries": "국가"
+        },
+        "search": {
+            "placeholder": "이름이나 언어로 검색...",
+            "loading": "멋진 언어 파트너를 찾는 중..."
+        },
+        "memberCard": {
+            "native": "모국어",
+            "learning": "학습 중",
+            "defaultBio": "연결을 원하는 열정적인 언어 학습자입니다!",
+            "actions": {
+                "like": "좋아요",
+                "message": "메시지"
+            }
+        },
+        "tabs": {
+            "all": "전체",
+            "popular": "인기",
+            "new": "신규"
+        },
+        "results": {
+            "showing": "{{count}}명의 멋진 언어 파트너{{plural}}를 보여드립니다",
+            "noneFound": {
+                "title": "언어 파트너를 찾을 수 없습니다",
+                "message": "더 많은 학습자를 찾으려면 검색 필터를 조정해보세요",
+                "resetFilters": "모든 필터 초기화"
+            }
+        },
+        "errors": {
+            "generic": "문제가 발생했습니다",
+            "tryAgain": "다시 시도"
+        },
+        "buttons": {
+            "clearFilters": "모든 필터 지우기"
+        }
+    },
+    "communityDetail": {
+        "errors": {
+            "invalidProfileId": "유효하지 않은 프로필 ID입니다",
+            "profileNotFound": "프로필을 찾을 수 없습니다",
+            "profileNotFoundDesc": "이 사용자 프로필이 존재하지 않거나 삭제되었습니다.",
+            "somethingWentWrong": "앗! 문제가 발생했습니다",
+            "tryAgainLater": "이 프로필을 불러올 수 없습니다. 나중에 다시 시도해주세요."
+        },
+        "buttons": {
+            "backToCommunity": "커뮤니티로 돌아가기",
+            "tryAgain": "다시 시도",
+            "follow": "팔로우",
+            "following": "팔로잉",
+            "startChat": "채팅 시작",
+            "videoCall": "영상 통화",
+            "startConversation": "대화 시작"
+        },
+        "loading": {
+            "loadingProfile": "프로필 불러오는 중...",
+            "initiatingCall": "{{name}}님과 통화를 시작하는 중..."
+        },
+        "notifications": {
+            "loginToFollow": "사용자를 팔로우하려면 로그인해야 합니다",
+            "followSuccess": "성공적으로 팔로우했습니다!",
+            "followFailed": "사용자 팔로우에 실패했습니다. 다시 시도해주세요.",
+            "loginToUnfollow": "사용자를 언팔로우하려면 로그인해야 합니다",
+            "unfollowSuccess": "성공적으로 언팔로우했습니다",
+            "unfollowFailed": "사용자 언팔로우에 실패했습니다. 다시 시도해주세요.",
+            "confirmUnfollow": "정말로 이 사용자를 언팔로우하시겠습니까?",
+            "loginToChat": "채팅을 시작하려면 로그인해야 합니다",
+            "chatStarted": "채팅이 성공적으로 시작되었습니다!",
+            "chatFailed": "채팅 시작에 실패했습니다. 다시 시도해주세요.",
+            "errorOccurred": "오류가 발생했습니다. 다시 시도해주세요."
+        },
+        "profile": {
+            "memberSince": "{{date}}부터 회원",
+            "yearsOld": "{{age}}세",
+            "noPhotos": "아직 사진이 없습니다",
+            "aboutUser": "{{name}}님 소개",
+            "noBio": "{{name}}님은 아직 소개를 추가하지 않았습니다. 대화를 시작하여 더 자세히 알아보세요!",
+            "readyToPractice": "{{name}}님과 연습할 준비가 되셨나요?",
+            "practiceDescription": "채팅을 시작하고 함께 언어 실력을 향상시키세요!"
+        },
+        "stats": {
+            "followers": "팔로워",
+            "following": "팔로잉"
+        },
+        "language": {
+            "speaks": "구사 언어",
+            "learning": "학습 중",
+            "notSpecified": "지정되지 않음"
+        }
     }
 }
-
