new change to moment details

--- a/src/utils/locales/eng.json
+++ b/src/utils/locales/eng.json
@@ -107,6 +107,7 @@
     "signIn": "sign in",
     "noCommentsYet": "No comments yet. Be the first to comment!",
     "commentsCount": "{{count}} Comments",
+    "comments": "Comments",
     "likeButton": "Like",
     "commentButton": "Comment",
     "shareButton": "Share",
