--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -344,5 +344,78 @@
             "learning": "학습 중",
             "notSpecified": "지정되지 않음"
         }
-    }
+    }, 
+        "communityDetailSection": {
+          "profile": {
+            "noPhotos": "사진이 없습니다"
+          },
+          "navigation": {
+            "backToCommunity": "커뮤니티로 돌아가기"
+          },
+          "errors": {
+            "invalidProfileId": "유효하지 않은 프로필 ID입니다",
+            "somethingWentWrong": "앗! 문제가 발생했습니다",
+            "couldNotLoadProfile": "이 프로필을 불러올 수 없습니다. 나중에 다시 시도해 주세요.",
+            "profileNotFound": "프로필을 찾을 수 없습니다",
+            "profileDoesNotExist": "이 사용자 프로필이 존재하지 않거나 삭제되었습니다.",
+            "loadingProfile": "프로필을 불러오는 중..."
+          },
+          "buttons": {
+            "tryAgain": "다시 시도",
+            "backToCommunity": "커뮤니티로 돌아가기"
+          },
+          "stats": {
+            "followers": "팔로워",
+            "following": "팔로잉"
+          },
+          "actions": {
+            "following": "팔로잉 중",
+            "follow": "팔로우",
+            "startChat": "채팅 시작",
+            "videoCall": "영상 통화",
+            "startConversation": "대화 시작"
+          },
+          "languages": {
+            "speaks": "구사 언어",
+            "learning": "학습 언어",
+            "notSpecified": "지정되지 않음"
+          },
+          "memberInfo": {
+            "yearsOld": "세",
+            "memberSince": "가입일"
+          },
+          "about": {
+            "aboutTitle": "소개",
+            "noBioMessage": "님은 아직 자기소개를 작성하지 않았습니다. 대화를 시작해서 더 알아보세요!"
+          },
+          "callToAction": {
+            "title": "님과 함께 연습할 준비가 되셨나요?",
+            "subtitle": "채팅을 시작하고 함께 언어 실력을 향상시켜보세요!"
+          },
+          "toasts": {
+            "needLogin": "로그인이 필요합니다:",
+            "followUsers": "사용자를 팔로우하려면",
+            "unfollowUsers": "사용자를 언팔로우하려면",
+            "startChat": "채팅을 시작하려면",
+            "failedToFollow": "팔로우에 실패했습니다. 다시 시도해 주세요.",
+            "successfullyFollowed": "성공적으로 팔로우했습니다!",
+            "successfullyUnfollowed": "성공적으로 언팔로우했습니다",
+            "failedToUnfollow": "언팔로우에 실패했습니다. 다시 시도해 주세요.",
+            "failedToStartChat": "채팅 시작에 실패했습니다. 다시 시도해 주세요.",
+            "initiatingCall": "님과 통화를 시작합니다...",
+            "errorOccurred": "오류가 발생했습니다. 다시 시도해 주세요."
+          },
+          "confirmations": {
+            "unfollowConfirm": "정말로 이 사용자를 언팔로우하시겠습니까?"
+          },
+          "accessibility": {
+            "viewPhoto": "사진 보기",
+            "userPhoto": "님의 사진"
+          },
+          "fallbacks": {
+            "defaultUser": "사용자"
+          }
+        }
+      }
+    
 }
