image uploader done

--- a/src/utils/locales/eng.json
+++ b/src/utils/locales/eng.json
@@ -12,6 +12,29 @@
   "my_moments": "My Moments",
   "logout": "Logout",
   "sign_in": "Sign In",
+  "image_upload": {
+    "image_drop": "Please drop only image files",
+    "max_upload_warning": "You can only upload {{count}} more image(s).",
+    "no_images_error": "Please upload at least one image",
+    "removed_from_selection": "Image removed from selection",
+    "deleted_success": "Image deleted successfully",
+    "replaced_success": "Image replaced successfully",
+    "current_images": "Current Images",
+    "no_images_uploaded": "No images uploaded yet",
+    "new_images": "New Images",
+    "no_new_images": "No new images selected",
+    "drop_images_here": "Drop images here or",
+    "select_files": "Select Files",
+    "remaining_slots": "You can add {{count}} more {{item}}",
+    "image": "image",
+    "images": "images",
+    "cancel": "Cancel",
+    "save_changes": "Save Changes",
+    "replace_image": "Replace",
+    "delete_image": "Delete image",
+    "remove_from_selection": "Remove from selection",
+    "image_gallery": "Image Gallery "
+  },
   "profile": {
     "title": "My Profile",
     "messages": {
