--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -12,6 +12,29 @@
     "my_moments": "내 모멘트",
     "logout": "로그아웃",
     "sign_in": "로그인",
+    "image_upload": {
+        "image_drop": "이미지 파일만 드롭해주세요",
+        "max_upload_warning": "{{count}}개의 이미지만 추가로 업로드 가능합니다.",
+        "no_images_error": "최소 한 개의 이미지를 업로드해주세요",
+        "removed_from_selection": "선택에서 이미지가 제거되었습니다",
+        "deleted_success": "이미지가 성공적으로 삭제되었습니다",
+        "replaced_success": "이미지가 성공적으로 교체되었습니다",
+        "current_images": "현재 이미지",
+        "no_images_uploaded": "업로드된 이미지가 없습니다",
+        "new_images": "새 이미지",
+        "no_new_images": "선택된 새 이미지가 없습니다",
+        "drop_images_here": "이미지를 여기에 드롭하거나",
+        "select_files": "파일 선택",
+        "remaining_slots": "{{count}}개의 {{item}}을 더 추가할 수 있습니다",
+        "image": "이미지",
+        "images": "이미지들",
+        "cancel": "취소",
+        "save_changes": "변경 사항 저장",
+        "replace_image": "교체",
+        "delete_image": "이미지 삭제",
+        "remove_from_selection": "선택에서 제거",
+        "image_gallery": "이미지 갤러리 "
+      },
     "profile": {
         "title": "내 프로필",
         "messages": {
