--- a/src/utils/locales/kor.json
+++ b/src/utils/locales/kor.json
@@ -56,12 +56,31 @@
             "no_following": "아직 아무도 팔로우하지 않았습니다.",
             "following_error": "팔로잉 목록을 불러오는 중 오류가 발생했습니다. 나중에 다시 시도해주세요.",
             "moments": "모먼트",
+            "stories": "스토리",
             "visitors": "방문자"
+        },
+        "visitors": {
+            "title": "프로필 방문자",
+            "last_visit": "마지막 방문",
+            "visit_count": "방문",
+            "via": "경로",
+            "via_moments": "모멘트에서",
+            "via_search": "검색에서",
+            "via_chat": "채팅에서",
+            "via_direct": "직접",
+            "via_followers": "팔로워에서",
+            "no_visitors": "아직 방문자가 없습니다",
+            "error": "방문자 목록을 불러오는 중 오류가 발생했습니다",
+            "total_visits": "총 방문",
+            "unique_visitors": "고유 방문자",
+            "visits_today": "오늘",
+            "visits_week": "이번 주"
         },
         "sections": {
             "personal_info": "개인 정보",
             "bio": "소개",
-            "languages": "언어"
+            "languages": "언어",
+            "photos": "사진"
         },
         "labels": {
             "name": "이름",
@@ -209,7 +228,9 @@
             "newUserText": "새로운 사용자신가요?",
             "registerLink": "회원가입",
             "successMessage": "성공적으로 로그인했습니다",
-            "invalidCredentialsError": "유효하지 않은 자격 증명"
+            "invalidCredentialsError": "유효하지 않은 자격 증명",
+            "orText": "또는",
+            "signInWithGoogle": "Google로 로그인"
         },
         "account": {
             "title": "계정 만들기",
@@ -439,5 +460,91 @@
             "defaultUser": "사용자"
           }
         }
+      ,
+      "stories": {
+        "title": "스토리",
+        "your_story": "내 스토리",
+        "create_story": "만들기",
+        "create_first_story": "스토리 만들기",
+        "no_stories": "아직 스토리가 없습니다",
+        "no_stories_desc": "친구들과 공유할 첫 번째 스토리를 만들어보세요!",
+        "error_loading": "스토리를 불러오는 중 오류가 발생했습니다",
+        "view_story": "스토리 보기",
+        "delete_story": "스토리 삭제",
+        "share_story": "스토리 공유",
+        "reply": "답장",
+        "react": "반응",
+        "viewers": "조회수",
+        "reactions": "반응",
+        "replies": "답장",
+        "next": "다음",
+        "previous": "이전",
+        "close": "닫기",
+        "send_reply": "답장 보내기",
+        "reply_placeholder": "메시지 보내기...",
+        "react_with_emoji": "이모지로 반응하기",
+        "vote": "투표",
+        "view_results": "결과 보기",
+        "answer_question": "질문 답하기",
+        "question_placeholder": "질문하기...",
+        "submit_answer": "답변 제출",
+        "anonymous": "익명",
+        "highlights": "하이라이트",
+        "create_highlight": "하이라이트 만들기",
+        "edit_highlight": "하이라이트 편집",
+        "delete_highlight": "하이라이트 삭제",
+        "add_to_highlight": "하이라이트에 추가",
+        "remove_from_highlight": "하이라이트에서 제거",
+        "highlight_title": "하이라이트 제목",
+        "archive": "보관함",
+        "archived_stories": "보관된 스토리",
+        "archive_story": "스토리 보관",
+        "close_friends": "친한 친구",
+        "add_close_friend": "친한 친구에 추가",
+        "remove_close_friend": "친한 친구에서 제거",
+        "manage_close_friends": "친한 친구 관리",
+        "privacy": {
+          "public": "전체 공개",
+          "friends": "친구만",
+          "close_friends": "친한 친구만"
+        },
+        "media": {
+          "upload_media": "미디어 업로드",
+          "take_photo": "사진 찍기",
+          "choose_from_gallery": "갤러리에서 선택",
+          "add_text": "텍스트 추가",
+          "text_color": "텍스트 색상",
+          "background_color": "배경 색상",
+          "font_style": "글꼴 스타일"
+        },
+        "stickers": {
+          "poll": "투표",
+          "question": "질문",
+          "location": "위치",
+          "mention": "멘션",
+          "link": "링크",
+          "music": "음악",
+          "hashtag": "해시태그"
+        },
+        "poll": {
+          "question": "질문",
+          "options": "선택지",
+          "add_option": "선택지 추가",
+          "remove_option": "선택지 제거",
+          "anonymous_voting": "익명 투표",
+          "your_vote": "내 투표",
+          "total_votes": "총 투표수"
+        },
+        "question_box": {
+          "prompt": "프롬프트",
+          "ask_me_anything": "무엇이든 물어보세요!",
+          "responses": "답변",
+          "no_responses": "아직 답변이 없습니다"
+        },
+        "sharing": {
+          "share_to_dm": "DM으로 공유",
+          "share_to_story": "스토리로 공유",
+          "share_externally": "외부 공유"
+        }
       }
-    
+    }
